--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="9U5IGogAPDrU3V-NNM5GEPm3Kb0-dnZIHzjIiH6YMEg" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="32×32 Image Converter Online – Free & Bulk Photo Resizer. Easily adjust your images to 32px x 32px dimension with our reliable and easy-to-use 32×32 Image Converter.">
